Handle no user info when trying to fire load event

--- a/demo/index.html
+++ b/demo/index.html
@@ -65,13 +65,13 @@
         setStatus("Rendering widget");
         console.log("Squatch.js is ready", squatch);
 
-        squatch.auto();
+        // squatch.auto();
 
-        // squatch.init({
-        //   domain: window.sandbox.domain,
-        //   tenantAlias: window.sandbox.tenantAlias,
-        //   debug: true,
-        // });
+        squatch.init({
+          domain: window.sandbox.domain,
+          tenantAlias: window.sandbox.tenantAlias,
+          debug: true,
+        });
         // squatch
         //   .widget(window.sandbox.initObj)
         //   .then(function (res) {
@@ -84,22 +84,22 @@
         //     setStatus("Error" + JSON.stringify(err));
         //     hideSpineer();
         //   });
+        // });
+        squatch
+          .widgets()
+          .upsertUser(window.sandbox.initObj)
+          .then(function (res) {
+            console.log("Upsert done", res);
+            setStatus("Done in " + (Date.now() - start) / 1000 + " seconds");
+            hideSpineer();
+            if (res.widget.open) res.widget.open();
+          })
+          .catch(function (err) {
+            console.log("Upsert error", err);
+            setStatus("Error" + JSON.stringify(err));
+            hideSpineer();
+          });
       });
-      //   squatch
-      //     .widgets()
-      //     .upsertUser(window.sandbox.initObj)
-      //     .then(function (res) {
-      //       console.log("Upsert done", res);
-      //       setStatus("Done in " + (Date.now() - start) / 1000 + " seconds");
-      //       hideSpineer();
-      //       if (res.widget.open) res.widget.open();
-      //     })
-      //     .catch(function (err) {
-      //       console.log("Upsert error", err);
-      //       setStatus("Error" + JSON.stringify(err));
-      //       hideSpineer();
-      //     });
-      // });
     </script>
 
     <div style="display: flex">
