--- a/demo/index.html
+++ b/demo/index.html
@@ -62,28 +62,29 @@
       console.log("Loading Squatch.js using sandbox", window.sandbox);
       setStatus("Loading squatch.js");
 
-      // squatch.ready(function () {
-      //   setStatus("Rendering widget");
-      //   console.log("Squatch.js is ready", squatch);
+      squatch.ready(function () {
+        setStatus("Rendering widget");
+        console.log("Squatch.js is ready", squatch);
 
-      //   squatch.init({
-      //     domain: window.sandbox.domain,
-      //     tenantAlias: window.sandbox.tenantAlias,
-      //     debug: true,
-      //   });
-      //   squatch
-      //     .widget(window.sandbox.initObj)
-      //     .then(function (res) {
-      //       setStatus("Done in " + (Date.now() - start) / 1000 + " seconds");
-      //       hideSpineer();
-      //       // if (res.widget.open) res.widget.open();
-      //     })
-      //     .catch(function (err) {
-      //       console.log("Upsert error", err);
-      //       setStatus("Error" + JSON.stringify(err));
-      //       hideSpineer();
-      //     });
-      // });
+        squatch.init({
+          domain: window.sandbox.domain,
+          tenantAlias: window.sandbox.tenantAlias,
+          debug: true,
+        });
+        squatch
+          .widget(window.sandbox.initObj)
+          .then(function (res) {
+            setStatus("Done in " + (Date.now() - start) / 1000 + " seconds");
+            hideSpineer();
+            // if (res.widget.open) res.widget.open();
+          })
+          .catch(function (err) {
+            console.log("Upsert error", err);
+            setStatus("Error" + JSON.stringify(err));
+            hideSpineer();
+          });
+      });
+
       // squatch
       //   .widgets()
       //   .upsertUser(window.sandbox.initObj)
