--- a/demo/index.html
+++ b/demo/index.html
@@ -71,12 +71,15 @@
           tenantAlias: window.sandbox.tenantAlias,
           debug: true,
         });
+
         squatch
-          .widget(window.sandbox.initObj)
+          .widgets()
+          .upsertUser(window.sandbox.initObj)
           .then(function (res) {
+            console.log("Upsert done", res);
             setStatus("Done in " + (Date.now() - start) / 1000 + " seconds");
             hideSpineer();
-            // if (res.widget.open) res.widget.open();
+            if (res.widget.open) res.widget.open();
           })
           .catch(function (err) {
             console.log("Upsert error", err);
@@ -84,22 +87,6 @@
             hideSpineer();
           });
       });
-
-      // squatch
-      //   .widgets()
-      //   .upsertUser(window.sandbox.initObj)
-      //   .then(function (res) {
-      //     console.log("Upsert done", res);
-      //     setStatus("Done in " + (Date.now() - start) / 1000 + " seconds");
-      //     hideSpineer();
-      //     if (res.widget.open) res.widget.open();
-      //   })
-      //   .catch(function (err) {
-      //     console.log("Upsert error", err);
-      //     setStatus("Error" + JSON.stringify(err));
-      //     hideSpineer();
-      //   });
-      // });
     </script>
 
     <div style="display: flex">
