--- a/demo/index.html
+++ b/demo/index.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <!-- <ir-embed widget-type="w/ir-tester"></ir-embed> -->
-    <ir-popup widget-type="w/ir-tester" id="ir-popup"></ir-popup>
     <button onclick="javascript:document.getElementById('ir-popup').open()">
       Open me!
     </button>
+    <ir-embed widget-type="w/ir-tester"></ir-embed>
+    <ir-popup widget-type="w/ir-tester" id="ir-popup"></ir-popup>
   </body>
 </html>
