decode jwt for env values + some cleanup

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,12 @@
     <button onclick="javascript:document.getElementById('ir-popup').open()">
       Open me!
     </button>
+    <button onclick="javascript:document.getElementById('ir-popup-2').open()">
+      Or me!
+    </button>
+
     <ir-embed widget-type="w/ir-tester"></ir-embed>
     <ir-popup widget-type="w/ir-tester" id="ir-popup"></ir-popup>
+    <ir-popup widget-type="w/mint-tester" id="ir-popup-2"></ir-popup>
   </body>
 </html>
