CA: Show popup widget automatically via attr

--- a/demo/index.html
+++ b/demo/index.html
@@ -51,7 +51,7 @@
           document.cookie = "_saasquatch=";
 
           element.innerHTML = /*html*/ `
-          <squatch-popup widget="w/ir-tester"><button>click me!</button></squatch-popup>
+          <squatch-popup widget="w/ir-tester" open><button>click me!</button></squatch-popup>
           <squatch-popup widget="w/mint-tester"><button>click me too!</button></squatch-popup>
           <button onclick="javascript:document.getElementById('squatch-embed').open()">
             Open embedded widget
