CA: Allow init to pull from window config

--- a/demo/index.html
+++ b/demo/index.html
@@ -53,6 +53,7 @@
           element.innerHTML = /*html*/ `
           <squatch-popup widget="w/ir-tester" open><button>click me!</button></squatch-popup>
           <squatch-popup widget="w/mint-tester"><button>click me too!</button></squatch-popup>
+          <button class="squatchpop">Squatchpop cta</button>
           <button onclick="javascript:document.getElementById('squatch-embed').open()">
             Open embedded widget
           </button>
