--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,7 @@
             widget="p/jayden-qa-obj/w/websiteReferralWidget"
             id="squatch-popup-friend"
           ></squatch-popup>
+          <squatch-embed locale="fr_FR" widget="p/jayden-qa-obj/w/friendWidget"></squatch-embed>
           `;
         });
       } else if (window.location.pathname.includes("passwordless")) {
@@ -61,7 +62,7 @@
             Close embedded widget
           </button>
 
-          <squatch-embed widget="w/ir-tester">Loading...</squatch-embed>
+          <squatch-embed locale="en_CA" widget="w/ir-tester">Loading...</squatch-embed>
           <squatch-embed
             widget="w/ir-tester"
             id="squatch-embed"
@@ -96,7 +97,6 @@
     <div id="authed-stuff"></div>
     <!-- /Authorized Widgets  -->
 
-    <squatch-embed widget="p/jayden-qa-obj/w/friendWidget"></squatch-embed>
     <!-- Passwordless widget -->
     <div id="unauthed-stuff"></div>
     <!-- /Passwordless widget -->
